--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@aws-sdk/client-s3": "^3.154.0",
     "@aws-sdk/s3-request-presigner": "^3.154.0",
     "@material-ui/core": "^4.12.4",
     "@reach/alert-dialog": "^0.16.2",
+    "@reach/dialog": "^0.18.0",
     "@stomp/stompjs": "^6.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "aws-sdk": "^2.1200.0",
     "axios": "^0.21.4",
     "babel": "^6.23.0",
     "bootstrap": "^4.6.0",
     "caniuse-lite": "^1.0.30001375",
+    "change-case": "^4.1.2",
     "classnames": "^2.3.1",
     "core-js": "^3.16.2",
     "crypto-js": "^4.1.1",
@@ -28,6 +30,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.6.7",
     "fs": "^0.0.1-security",
+    "has": "^1.0.3",
     "html-react-parser": "^1.4.10",
     "html-to-image": "^1.9.0",
     "html2canvas": "^1.4.1",
@@ -44,10 +47,7 @@
     "prop-types": "^15.7.2",
     "quill-image-drop-module": "^1.0.3",
     "rc-time-picker": "^3.7.3",
-    "change-case": "^4.1.2",
-    "has": "^1.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
     "react-async": "^10.0.1",
     "react-big-calendar": "^1.6.8",
@@ -56,6 +56,7 @@
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.17.5",
     "react-hot-loader": "^4.13.1",
     "react-i18next": "^11.18.4",
@@ -63,33 +64,33 @@
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.14.4",
     "react-pdf": "^6.2.0",
+    "react-player": "^2.13.0",
     "react-query": "^3.39.2",
     "react-quill": "^2.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "5.0.1",
     "react-select": "^5.2.2",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.13.4",
     "react-stomp": "^5.1.0",
     "react-toastify": "^9.1.1",
     "react-unity-webgl": "^8.6.1",
-    "react-player": "^2.13.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
-    "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0",
     "react-use-pip": "^1.5.0",
     "read-excel-file": "^5.5.3",
     "redux": "4.1.1",
     "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "simplebar-react": "^2.3.5",
     "sockjs-client": "^1.6.0",
     "styled-components": "^5.3.3",
     "swiper": "^8.4.7",
     "use-react-screenshot": "^3.0.0",
     "usehooks-ts": "^2.9.1",
+    "web-vitals": "^2.1.4",
     "webpack-obfuscator": "^3.5.1",
-    "ws": "^8.4.0",
-    "web-vitals": "^2.1.4"
+    "ws": "^8.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
