--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://be-common-5ce913bbd3df.herokuapp.com",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.154.0",
     "@aws-sdk/s3-request-presigner": "^3.154.0",
